unpackaged/main/default/objects/SFCPQ_Integration_Settings__mdt/SFCPQ_Integration_Settings__mdt.object-meta.xml
<CustomObject>
    <label>SFCPQ Integration Settings</label>
    <pluralLabel>SFCPQ Integration Settings</pluralLabel>
</CustomObject>