unpackaged/main/default/objects/SFCPQ_Integration_Settings__mdt/fields/Client_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Client_Identifier__c</fullName>
    <label>Client Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>