unpackaged/main/default/objects/SFCPQ_Integration_Settings__mdt/fields/CPQ_Environment__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Environment__c</fullName>
    <label>CPQ Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>