unpackaged/main/default/objects/SFCPQ_Integration_Settings__mdt/fields/CPQ_Environment_URL__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Environment_URL__c</fullName>
    <label>CPQ Environment URL</label>
    <type>Url</type>
</CustomField>