unpackaged/main/default/objects/SFCPQ_Integration_Settings__mdt/fields/FSSO__c.field-meta.xml
<CustomField>
    <fullName>FSSO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSSO</label>
    <type>Checkbox</type>
</CustomField>