unpackaged/main/default/objects/SFCPQ_Integration_Settings__mdt/fields/IDP_Route__c.field-meta.xml
<CustomField>
    <fullName>IDP_Route__c</fullName>
    <label>IDP Route</label>
    <length>255</length>
    <type>Text</type>
</CustomField>