unpackaged/main/default/objects/SFCPQ_Integration_Settings__mdt/fields/JWT_Token_Signing_Key__c.field-meta.xml
<CustomField>
    <fullName>JWT_Token_Signing_Key__c</fullName>
    <label>JWT Token Signing Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>