unpackaged/main/default/objects/SFCPQ_Integration_Settings__mdt/fields/SF_Environment_URL__c.field-meta.xml
<CustomField>
    <fullName>SF_Environment_URL__c</fullName>
    <label>SF Environment URL</label>
    <type>Url</type>
</CustomField>