unpackaged/main/default/objects/SFCPQ_Integration_Settings__mdt/fields/Use_SFCPQ_Usernames_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Use_SFCPQ_Usernames_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use SFCPQ Usernames Mapping</label>
    <type>Checkbox</type>
</CustomField>